# learn-bazel-ios-android

./: MODULE.bazel  README.md  WORKSPACE  bazel-BazelBuild  bazel-bin  bazel-out  bazel-testlogs
Bullseye-iOS/: BUILD
Bullseye-iOS/Bullseye.xcodeproj/project.xcworkspace/xcuserdata/adhamfarid.xcuserdatad/: UserInterfaceState.xcuserstate
Bullseye-iOS/Bullseye/App/Assets.xcassets/AppIcon.appiconset/: Contents.json
